[package]
name = "lemna"
version = "0.4.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
description = "A Reactive UI framework for Rust"
edition = "2021"
repository = "https://github.com/AlexCharlton/lemna"
documentation = "https://docs.rs/lemna"
license = "MIT"
keywords = ["ui", "gui"]

[workspace]
members = ["macros",
           "backends/baseview",
           # "backends/winit",
           # "backends/wx-rs",
           "nih-plug", "nih-plug/xtask",
           "nih-plug/examples/hello",
           "nih-plug/examples/params",
          ]

[features]
default = ["msaa_shapes", "open_iconic", "file-dialogs", "shaders"]

instrumented = ["superluminal-perf"]
file-dialogs = ["tinyfiledialogs"]
shaders = ["shaderc"] # You should always include this. It's only a feature so that we can remove it for docs.rs
msaa_shapes = []
open_iconic = []
docs_rs = []
docs=["embed-doc-image"]

[package.metadata.docs.rs]
features = ["docs_rs", "docs"]
no-default-features = true

[dependencies.wgpu]
version = "0.16"
# path = "../external/wgpu-rs"
features = ["spirv"]

[dependencies]
lemna-macros = { workspace = true }
ahash = "0.3.2"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.17.0"
futures = "0.3.4"
glyph_brush_layout = "0.2"
log = "0.4"
lyon = { workspace = true }
raw-window-handle = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
simplelog = { workspace = true }

# For glyph_brush_draw_cache
ab_glyph = "0.2.2"
linked-hash-map = "0.5"
rustc-hash = "1"
crossbeam-deque = "0.7"
crossbeam-channel = "0.4.2"
rayon = "1.3"

# Features
superluminal-perf = { version = "0.1", optional = true }
tinyfiledialogs = { version = "3.9", optional = true }
embed-doc-image = { version = "0.1", optional = true }

[workspace.dependencies]
raw-window-handle = "0.5"
lemna-macros = { path = "./macros", version="0.4" }
simplelog = "0.7"
lyon = "0.15.6"
ttf-noto-sans = "0.1"

[workspace.dependencies.baseview]
git = "https://github.com/AlexCharlton/baseview.git"
# path = "../../../external/baseview"

[build-dependencies]
glob = "0.3"
shaderc = { version = "0.8", optional = true}

# [patch.crates-io]
# objc = { path="../external/rust-objc" }
