[package]
name = "lemna"
version = "0.4.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
description = "A Reactive UI framework for Rust"
edition = "2024"
repository = "https://github.com/AlexCharlton/lemna"
documentation = "https://docs.rs/lemna"
license = "MIT"
keywords = ["ui", "gui"]

[workspace]
members = [
    "macros",
    "backends/baseview",
    "backends/winit",
    "nih-plug",
    "nih-plug/xtask",
    "nih-plug/examples/hello",
    "nih-plug/examples/params",
]

[features]
default = ["file-dialogs", "msaa_shapes", "open_iconic", "wgpu"]

std = [
    "ab_glyph",
    "crossbeam-deque",
    "crossbeam-channel",
    "linked-hash-map",
    "lyon",
    "raw-window-handle",
    "rayon",
    "rustc-hash",
    "wgpu",
    "embassy-sync/std",
]
wgpu = ["dep:wgpu", "shaders", "std"]
instrumented = ["superluminal-perf", "std"]
file-dialogs = ["tinyfiledialogs", "std"]
shaders = [
    "shaderc",
    "std",
] # This is a feature so that we can remove it for docs.rs. Does not to be directly included in downstream crates.
msaa_shapes = ["std"]
open_iconic = []
docs_rs = []
docs = ["embed-doc-image"]

[package.metadata.docs.rs]
features = ["docs_rs", "docs", "std"]
default-features = false

[dependencies.wgpu]
version = "0.16"
# path = "../external/wgpu-rs"
features = ["spirv"]
optional = true

[dependencies]
lemna-macros = { workspace = true }
ahash = "0.8"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.17.0"
embassy-futures = "0.1"
embassy-sync = "0.7"
futures = "0.3.4"
glyph_brush_layout = "0.2"
log = "0.4"
lyon = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }

# For glyph_brush_draw_cache
ab_glyph = { version = "0.2.2", optional = true }
linked-hash-map = { version = "0.5", optional = true }
rustc-hash = { version = "1", optional = true }
crossbeam-deque = { version = "0.7", optional = true }
crossbeam-channel = { version = "0.4.2", optional = true }
rayon = { version = "1.3", optional = true }

# Feature-dependent dependencies
superluminal-perf = { version = "0.1", optional = true }
tinyfiledialogs = { version = "3.9", optional = true }
embed-doc-image = { version = "0.1", optional = true }

[workspace.dependencies]
raw-window-handle = "0.5"
lemna-macros = { path = "./macros", version = "0.4" }
simplelog = "0.12"
lyon = "0.15.6"
ttf-noto-sans = "0.1"

[workspace.dependencies.baseview]
git = "https://github.com/AlexCharlton/baseview.git"
# path = "../external/baseview"

[build-dependencies]
glob = "0.3"
shaderc = { version = "0.10", optional = true, features = [
    "prefer-static-linking",
] }

# [patch.crates-io]
# objc = { path="../external/rust-objc" }
