[package]
name = "lemna"
version = "0.5.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
description = "A Reactive UI framework for Rust"
edition = "2024"
repository = "https://github.com/AlexCharlton/lemna"
documentation = "https://docs.rs/lemna"
license = "MIT"
keywords = ["ui", "gui", "no-std"]

[workspace]
members = [
    "macros",
    "backends/baseview",
    "backends/winit",
    "nih-plug",
    "nih-plug/xtask",
    "nih-plug/examples/hello",
    "nih-plug/examples/params",
]

[features]
default = ["file_dialogs", "antialiased_shapes", "open_iconic", "wgpu_renderer"]

std = [
    "critical-section/std",
    "crossbeam-channel",
    "embassy-sync/std",
    "kurbo/std",
    "raw-window-handle",
]
wgpu_renderer = ["dep:wgpu", "shaders", "lyon", "std"]
cpu_renderer = ["embedded-graphics", "tiny-skia"]
# For std environments where we don't want to use wgpu
std_cpu = ["cpu_renderer", "std", "softbuffer"]

instrumented = ["superluminal-perf", "std"]
file_dialogs = ["tinyfiledialogs", "std"]
shaders = [
    # This is a feature so that we can remove it for docs.rs. Does not to be directly included in downstream crates.
    "shaderc",
    "std",
]
antialiased_shapes = []
open_iconic = []
docs_rs = []
docs = ["embed-doc-image"]

[package.metadata.docs.rs]
features = ["docs_rs", "docs", "std", "cpu_renderer"]
default-features = false

[dependencies.wgpu]
version = "0.16"
# path = "../external/wgpu-rs"
features = ["spirv"]
optional = true

[dependencies]
lemna-macros = { workspace = true }
ahash = { version = "0.8", default-features = false }
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.17.0"
critical-section = { version = "1" }
embassy-futures = "0.1"
embassy-sync = "0.7"
embedded-graphics = { version = "0.8", optional = true }
hashbrown = "0.16"
indexmap = { version = "2.2", default-features = false }
fontdue = { version = "0.9" }
futures = "0.3.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Feature-dependent dependencies
superluminal-perf = { version = "0.1", optional = true }
crossbeam-channel = { version = "0.4", optional = true }
tinyfiledialogs = { version = "3.9", optional = true }
embed-doc-image = { version = "0.1", optional = true }
kurbo = { version = "0.12", default-features = false, features = ["libm"] }
lyon = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
softbuffer = { version = "0.3", optional = true }
tiny-skia = { version = "0.11", optional = true }

[workspace.dependencies]
raw-window-handle = "0.5"
lemna-macros = { path = "./macros", version = "0.5" }
simplelog = "0.12"
lyon = "1.0"
ttf-noto-sans = "0.1"

[workspace.dependencies.baseview]
git = "https://github.com/AlexCharlton/baseview.git"
# path = "../external/baseview"

[build-dependencies]
glob = "0.3"
shaderc = { version = "0.10", optional = true, features = [
    "prefer-static-linking",
] }

# [patch.crates-io]
# objc = { path="../external/rust-objc" }
