[package]
name = "lemna-macros"
version = "0.2.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2021"
description = "Macros for lemna"
repository = "https://github.com/AlexCharlton/lemna"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }