[package]
name = "lemna-macros"
version = "0.4.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2021"
description = "Macros for lemna"
repository = "https://github.com/AlexCharlton/lemna"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
global_counter = "0.2"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"