[package]
name = "lemna-macros"
version = "0.5.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2024"
description = "Macros for lemna"
repository = "https://github.com/AlexCharlton/lemna"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
global_counter = "0.2"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
