[package]
name = "lemna-nih-plug"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/AlexCharlton/midi-m8"
license = "MIT"

[features]
standalone = ["nih_plug/standalone"]

[dependencies]
baseview = { workspace = true }
lemna-baseview = { version = "0.5", path = "../backends/baseview" }
lemna = { version = "0.5", path = ".." }
crossbeam-channel = "0.4"
[dependencies.nih_plug]
#path = "../../external/nih-plug"
git = "https://github.com/AlexCharlton/nih-plug.git"
