[package]
name = "lemna-nih-plug"
version = "0.4.0"
edition = "2024"
license = "MIT"

[features]
standalone = ["nih_plug/standalone"]
cpu_renderer = ["lemna/std_cpu"]
gpu_renderer = ["lemna/wgpu_renderer"]

[dependencies]
baseview = { workspace = true }
lemna-baseview = { version = "0.5", path = "../backends/baseview", default-features = false }
lemna = { version = "0.5", path = "..", default-features = false }
crossbeam-channel = "0.4"
[dependencies.nih_plug]
# path = "../../external/nih-plug"
git = "https://github.com/AlexCharlton/nih-plug.git"
rev = "a77ecc48794bb5f50b9aba389c07696e05b7a9fe"
