[package]
name = "lemna-nih-plug"
version = "0.4.0"
edition = "2024"
license = "MIT"

[features]
standalone = ["nih_plug/standalone"]
zstd = ["nih_plug/zstd"]
cpu_renderer = ["lemna/std_cpu"]
gpu_renderer = ["lemna/wgpu_renderer"]

[dependencies]
baseview = { workspace = true }
lemna-baseview = { version = "0.5", path = "../backends/baseview", default-features = false }
lemna = { version = "0.5", path = "..", default-features = false }
crossbeam-channel = "0.4"
[dependencies.nih_plug]
# path = "../../external/nih-plug"
git = "https://github.com/AlexCharlton/nih-plug.git"
rev = "b64f210fb088c81ef0f36147e3ea82acf9da2e6a"
