[package]
name = "lemna-baseview"
version = "0.4.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
description = "Baseview windowing backend support for lemna"
edition = "2021"
repository = "https://github.com/AlexCharlton/lemna"
documentation = "https://docs.rs/lemna"
license = "MIT"

[features]
instrumented = ["lemna/instrumented"]

[dependencies]
arboard = "3.2"
baseview = { workspace = true }
keyboard-types = "0.6"
lemna = { path = "../../", version = "0.4" }
raw-window-handle = { workspace = true }
crossbeam-channel = "0.4"

[dev-dependencies]
lazy_static = "1.4.0"
lemna-macros = { workspace = true }
lyon = { workspace = true }
png = "0.17.9"
simplelog = { workspace = true }
ttf-noto-sans = { workspace = true }