[package]
name = "lemna-winit"
version = "0.4.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
description = "winit windowing backend support for lemna"
edition = "2024"
repository = "https://github.com/AlexCharlton/lemna"
documentation = "https://docs.rs/lemna"
license = "MIT"

[features]
default = ["gpu_renderer"]
instrumented = ["lemna/instrumented"]
cpu_renderer = ["lemna/std_cpu"]
gpu_renderer = ["lemna/wgpu_renderer"]
antialiased_shapes = ["lemna/antialiased_shapes"]

[dependencies]
lemna = { path = "../../", version = "0.4", default-features = false, features = [
    "std",
] }
raw-window-handle = { workspace = true }
winit = { version = "0.28" }

[dev-dependencies]
ttf-noto-sans = "0.1"
lemna-macros = { workspace = true }
simplelog = { workspace = true }
