[package]
name = "lemna-wx-rs"
version = "0.2.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
description = "wx-rs windowing backend support for lemna"
edition = "2021"
repository = "https://github.com/AlexCharlton/lemna"
documentation = "https://docs.rs/lemna"
license = "MIT"

[dependencies]
lemna = { path = "../../", version = "0.2" }
raw-window-handle = { workspace = true }

[dependencies.wx-rs]
version = "0.2"
#path = "../../../wx-rs"

[dev-dependencies]
lemna-macros = { workspace = true }
lyon = { workspace = true }
simplelog = { workspace = true }
ttf-noto-sans = "0.1"
