[package]
name = "plugin-example-params"
edition = "2021"
license = "MIT"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lemna = { path = "../../../", default-features = false, features = [
    "antialiased_shapes",
    "open_iconic",
] }
lemna-macros = { path = "../../../macros/" }
lemna-nice-plug = { path = "../../../nice-plug/", features = ["gpu_renderer"] }
nice-plug = { workspace = true, features = [
    "standalone",
] }
log = { version = "0.4", features = ["max_level_warn"] }
