[package]
name = "plugin-example-hello"
edition = "2021"
license = "MIT"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lemna = { path = "../../../", default-features = false, features = [
    "antialiased_shapes",
    "open_iconic",
] }
lemna-nih-plug = { path = "../../../nih-plug/", features = ["standalone"] }
